Fix <aside> vertical alignment

--- a/writ.css
+++ b/writ.css
@@ -57,6 +57,7 @@ body > article aside {
   position: absolute;
   left: 100%;
   width: 25ch;
+  margin-top: 0.5em;
   padding: 0 1ch;
 }
 
